--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@vtfk/components": "^0.2.1",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "vue": "^2.6.11",
     "vuera": "^0.2.7"
   },
