--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vtfk/components": "^0.2.1",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "css-loader": "^5.2.7",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "style-loader": "^2.0.0",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.1",
     "vuera": "^0.2.7"
@@ -28,8 +30,11 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "7.19.1",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
