--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.2.7",
+    "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
+    "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
@@ -34,7 +36,6 @@
     "eslint": "6.8.0",
     "eslint-plugin-vue": "7.19.1",
     "sass": "^1.43.2",
-    "sass-loader": "^12.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
