--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ag-grid-community/all-modules": "^26.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta2",
     "@fortawesome/free-brands-svg-icons": "^6.0.0-beta2",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta2",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
     "@vtfk/components": "^0.2.1",
+    "ag-grid-community": "^26.1.0",
+    "ag-grid-vue": "^26.1.0",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "css-loader": "^5.2.7",
@@ -23,6 +26,7 @@
     "react-dom": "^17.0.2",
     "style-loader": "^2.0.0",
     "vue": "^2.6.11",
+    "vue-property-decorator": "^8.0.0",
     "vue2-leaflet": "^2.7.1",
     "vuera": "^0.2.7"
   },
