--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
     "proj4": "^2.7.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.1",
     "vuera": "^0.2.7"
