--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VUE_APP_MATRIKKELPROXYAPI_BASE_URL="http://localhost:3000/"
 VUE_APP_MATRIKKELPROXUAPI_APIKEY="DETTEERENTEST"
 VUE_APP_MATRIKKELPROXUAPI_CLIENTID="VTFK-Masseutsendelse"
+VUE_APP_USE_MOCK="true"
