--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^5.2.7",
     "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
+    "msw": "^0.35.0",
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -62,5 +63,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
