--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.0.0",
     "vue2-leaflet": "^2.7.1",
-    "vuera": "^0.2.7"
+    "vuera": "^0.2.7",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -36,7 +37,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "7.19.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "^2.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -52,12 +57,6 @@
     },
     "rules": {}
   },
-  "size-limit": [
-    {
-      "path": "./dist",
-      "webpack": false
-    }
-  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
@@ -65,5 +64,11 @@
   ],
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "./dist",
+      "webpack": false
+    }
+  ]
 }
