--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
     "vue2-leaflet": "^2.7.1",
     "vuera": "^0.2.7",
     "vuetify": "^2.4.0"
