--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint": "6.8.0",
     "eslint-plugin-vue": "7.20.0",
     "sass": "1.43.2",
-    "sass-loader": "12.2.0",
+    "sass-loader": "^10",
     "vue-cli-plugin-vuetify": "^2.4.3",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
