--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/area": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "@vtfk/components": "^0.2.1",
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
