--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,3 @@
 {
-    "packageRules": [
-      {
-        "matchUpdateTypes": ["patch", "pin", "digest"],
-        "automerge": true
-      }
-    ]
+  "extends": ["@vtfk"]
 }
