--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^3.1.1",
     "@turf/area": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@vtfk/components": "^0.2.1",
@@ -15,6 +16,7 @@
     "core-js": "^3.6.5",
     "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
+    "lodash.set": "^4.3.2",
     "msw": "^0.35.0",
     "proj4": "^2.7.5",
     "react": "^17.0.2",
