--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
+    "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "msw": "^0.35.0",
     "proj4": "^2.7.5",
