--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sjablong": "^1.0.13",
     "vue": "^2.6.11",
     "vue-router": "3.5.3",
     "vue2-leaflet": "^2.7.1",
