--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sjablong": "^1.0.25",
+    "sjablong": "^1.0.22",
     "vue": "^2.6.11",
     "vue-router": "3.5.3",
     "vue2-leaflet": "^2.7.1",
     "vuera": "^0.2.7",
-    "vuetify": "2.5.14",
-    "vuex": "^3.6.2"
+    "vuetify": "2.5.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.5.15",
