--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sjablong": "^1.0.22",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "3.5.3",
     "vue2-leaflet": "^2.7.1",
