--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.2",
     "lodash.set": "^4.3.2",
+    "lodash.unset": "^4.5.2",
     "msw": "^0.35.0",
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sjablong": "^1.0.27",
+    "sjablong": "^1.0.28",
     "vue": "^2.6.11",
     "vue-router": "3.5.3",
     "vue2-leaflet": "^2.7.1",
