--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VUE_APP_MATRIKKELPROXYAPI_BASE_URL="http://localhost:3000/"
 VUE_APP_MATRIKKELPROXUAPI_APIKEY="DETTEERENTEST"
 VUE_APP_MATRIKKELPROXUAPI_CLIENTID="VTFK-Masseutsendelse"
-VUE_APP_USE_MOCK="false"
-VUE_APP_MASSEUTSENDELSE_USE_DEVAPI="true"
+VUE_APP_USE_MOCK="true"
+VUE_APP_MASSEUTSENDELSE_USE_DEVAPI="false"
