--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dxf-parser": "^1.0.2",
     "leaflet": "^1.7.1",
     "lodash.get": "^4.4.2",
+    "lodash.keys": "^4.2.0",
     "lodash.merge": "^4.6.2",
+    "lodash.pick": "^4.4.0",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "msw": "^0.35.0",
