--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "7.20.0",
-    "sass": "1.43.4",
+    "sass": "~1.32",
     "sass-loader": "^10",
     "vue-cli-plugin-vuetify": "2.4.4",
     "vue-template-compiler": "^2.6.11",
