Mange endringer og omstruktureringer

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@turf/area": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "@vtfk/components": "^0.2.1",
+    "@vtfk/utilities": "^1.0.0",
     "@xmldom/xmldom": "^0.7.5",
     "axios": "^0.22.0",
     "core-js": "3.19.3",
