En rekke forbedringer på filopplastning

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ VUE_APP_MATRIKKELPROXUAPI_CLIENTID="VTFK-Masseutsendelse"
 VUE_APP_MASSEUTSENDELSEAPI_BASE_URL="http://localhost:7071/"
 VUE_APP_MOCK_MATRIKKEL_API=false
 VUE_APP_MOCK_MASSEUTSENDELSE_API=false
+VUE_APP_EXCLUDED_OWNER_IDS=821227062
