Updated config for VTFK

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,6 @@
 {
-  "extends": ["@vtfk"],
-  "ignoreDeps": ["sass", "sass-loader"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "local>vtfk/renovate-config"
+  ]
 }
