--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
+        env:
+          VUE_APP_AZUREAD_CLIENTID: ${{ secrets.VUE_APP_AZUREAD_CLIENTID }}
+          VUE_APP_AZUREAD_AUTHORITYURL: ${{ secrets.VUE_APP_AZUREAD_AUTHORITYURL }}
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_MANGO_MUSHROOM_052037403 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
