Fikset miljøvariabel bug

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           VUE_APP_MASSEUTSENDELSEAPI_API_CODE: ${{ secrets.VUE_APP_MASSEUTSENDELSEAPI_API_CODE }}
           VUE_APP_MASSEUTSENDELSEAPI_BASE_URL: ${{ secrets.VUE_APP_MASSEUTSENDELSEAPI_BASE_URL }}
+          VUE_APP_MATRIKKELPROXY_CLIENTID: ${{ secrets.VUE_APP_MATRIKKELPROXY_CLIENTID }}
           VUE_APP_MOCK_MASSEUTSENDELSE_API: ${{ secrets.VUE_APP_MOCK_MASSEUTSENDELSE_API }}
           VUE_APP_MOCK_MATRIKKEL_API: ${{ secrets.VUE_APP_MOCK_MATRIKKEL_API}}
           VUE_APP_AZUREAD_CLIENTID: ${{ secrets.VUE_APP_AZUREAD_CLIENTID }}
