--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@azure/msal-browser": "^2.20.0",
     "@mapbox/togeojson": "^0.16.0",
+    "@sentry/tracing": "^6.16.1",
+    "@sentry/vue": "^6.16.1",
     "@toast-ui/vue-editor": "3.1.2",
     "@turf/area": "^6.5.0",
     "@turf/helpers": "^6.5.0",
