Lagt til PDF-endpoint som environment variabel

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
           VUE_APP_AZUREAD_CLIENTID: ${{ secrets.VUE_APP_AZUREAD_CLIENTID }}
           VUE_APP_AZUREAD_AUTHORITYURL: ${{ secrets.VUE_APP_AZUREAD_AUTHORITYURL }}
           VUE_APP_EXCLUDED_OWNER_IDS: ${{ secrets.VUE_APP_EXCLUDED_OWNER_IDS }}
+          VUE_APP_VTFK_PDFGENERATOR_ENDPOINT: ${{ secrets.VUE_APP_VTFK_PDFGENERATOR_ENDPOINT }}
           VUE_APP_SENTRY_DSN: ${{ secrets.VUE_APP_SENTRY_DSN }}
           VUE_APP_SENTRY_TRACINGORIGINS: ${{ secrets.VUE_APP_SENTRY_TRACINGORIGINS }}
         with:
