--- a/.env.development
+++ b/.env.development
@@ -6,5 +6,6 @@ VUE_APP_MOCK_MATRIKKEL_API=false
 VUE_APP_MOCK_MASSEUTSENDELSE_API=false
 VUE_APP_AZUREAD_CLIENTID=ffd9d6ce-d313-4d5d-a758-0affa6dadd0a
 VUE_APP_AZUREAD_AUTHORITYURL=https://login.microsoftonline.com/08f3813c-9f29-482f-9aec-16ef7cbf477a/
+VUE_APP_VTFK_PDFGENERATOR_ENDPOINT=https://api.vtfk.no/pdf/v1/generatev2
 VUE_APP_SENTRY_DSN=https://d52af730707f416985d28c65a81805e2@o436983.ingest.sentry.io/6141573
 VUE_APP_SENTRY_TRACINGORIGINS=localhost,https://masseutsendelse.vtfk.dev/
