--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vtfk/components": "0.2.1",
     "@vtfk/utilities": "1.0.0",
     "@xmldom/xmldom": "0.8.0",
-    "axios": "0.22.0",
+    "axios": "^0.25.0",
     "core-js": "3.19.3",
     "dxf-parser": "1.1.2",
     "leaflet": "1.7.1",
