--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,13 +1,11 @@
-name: "Test: Build and deploy to Azure static web app"
+name: "Prod: Build and deploy to Azure static web app"
 on:
   push:
     branches:
       - main
-      - test
   workflow_dispatch:
     branches:
       - main
-      - test
 jobs:
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
@@ -21,18 +19,16 @@ jobs:
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         env:
-          VUE_APP_MASSEUTSENDELSEAPI_BASE_URL: ${{ secrets.VUE_APP_MASSEUTSENDELSEAPI_BASE_URL }}
-          VUE_APP_MATRIKKELPROXY_CLIENTID: ${{ secrets.VUE_APP_MATRIKKELPROXY_CLIENTID }}
-          VUE_APP_MOCK_MASSEUTSENDELSE_API: ${{ secrets.VUE_APP_MOCK_MASSEUTSENDELSE_API }}
-          VUE_APP_MOCK_MATRIKKEL_API: ${{ secrets.VUE_APP_MOCK_MATRIKKEL_API}}
+          VUE_APP_MASSEUTSENDELSEAPI_BASE_URL: ${{ secrets.PROD_VUE_APP_MASSEUTSENDELSEAPI_BASE_URL }}
+          VUE_APP_MATRIKKELPROXY_CLIENTID: ${{ secrets.PROD_VUE_APP_MATRIKKELPROXY_CLIENTID }}
+          VUE_APP_EXCLUDED_OWNER_IDS: ${{ secrets.PROD_VUE_APP_EXCLUDED_OWNER_IDS }}     
+          VUE_APP_VTFK_PDFGENERATOR_ENDPOINT: ${{ secrets.PROD_VUE_APP_VTFK_PDFGENERATOR_ENDPOINT }}
           VUE_APP_AZUREAD_CLIENTID: ${{ secrets.VUE_APP_AZUREAD_CLIENTID }}
           VUE_APP_AZUREAD_AUTHORITYURL: ${{ secrets.VUE_APP_AZUREAD_AUTHORITYURL }}
-          VUE_APP_EXCLUDED_OWNER_IDS: ${{ secrets.VUE_APP_EXCLUDED_OWNER_IDS }}
-          VUE_APP_VTFK_PDFGENERATOR_ENDPOINT: ${{ secrets.VUE_APP_VTFK_PDFGENERATOR_ENDPOINT }}
           VUE_APP_SENTRY_DSN: ${{ secrets.VUE_APP_SENTRY_DSN }}
           VUE_APP_SENTRY_TRACINGORIGINS: ${{ secrets.VUE_APP_SENTRY_TRACINGORIGINS }}
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_MANGO_MUSHROOM_052037403 }}
+          azure_static_web_apps_api_token: ${{ secrets.PROD_AZURE_SWA_DEPLOYMENT_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: "upload"
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
