--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@toast-ui/vue-editor": "3.1.3",
     "@turf/area": "6.5.0",
     "@turf/helpers": "6.5.0",
-    "@vtfk/components": "0.2.1",
+    "@vtfk/components": "^0.8.0",
     "@vtfk/utilities": "1.0.0",
     "@xmldom/xmldom": "0.8.1",
     "axios": "0.25.0",
