--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "0.25.0",
     "core-js": "3.19.3",
     "dxf-parser": "1.1.2",
+    "export-from-json": "^1.7.2",
     "leaflet": "1.7.1",
     "lodash.get": "4.4.2",
     "lodash.keys": "4.2.0",
